<resources>
    <string name="app_name">echec_android</string>
    <string name="lLayout1"> linearLayout</string>
    <string name="information">Veuillez entrer les informations avant de commencer la partie. Veuillez noter que le joueur ayant les blancs commence en premier.</string>
    <string name="information_pertinente">Information pertinente:</string>
    <string name="confirmerText">Confirmer</string>
    <string name="nom_du_joueur_blanc">Nom du joueur blanc:</string>
    <string name="nom_du_joueur_noire">Nom du joueur noire:</string>
    <string name="toast_info_joueur">Vous devez au moins avoir 4 caractères pour chacun de vos nom et le nom ne doit pas être le même !</string>
    <string name="revenir_en_arriere">Revenir en arriere</string>
    <string name="confirmer">Confirmer</string>
    <string name="promotion_text">Veuillez choisir de type de pièce dont vous voulez promouvoir votre pion!</string>
    <string name="le_joueur_blanc_commence">Le joueur blanc commence!</string>
    <string name="numero_tour">Numero de tour</string>
    <string name="nom_joueur">Nom du joueur</string>
    <string name="representation_echiquier">Representation de l\'echiquier</string>
</resources>
